JPMS module descriptors.
Signed-off-by: Roman Grigoriadi <roman.grigoriadi@oracle.com>