@@ -139,8 +139,9 @@
         <ignore.failing.tests>true</ignore.failing.tests>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <javadoc.links.dir>${project.parent.basedir}/src/main/javadoc-link</javadoc.links.dir>
-        <javadoc.links.offline>false</javadoc.links.offline>
+        <main.basedir>${project.basedir}</main.basedir>
+        <javadoc.links.dir>${main.basedir}/src/main/javadoc-link</javadoc.links.dir>
+        <javadoc.links.offline>true</javadoc.links.offline>
         <findbugs.skip>false</findbugs.skip>
         <findbugs.threshold>Normal</findbugs.threshold>
         <findbugs.common>exclude-common.xml</findbugs.common>
@@ -302,13 +303,8 @@
                         <execution>
                             <id>default-compile</id>
                             <configuration>
-                                <release>${upper.java.level}</release>
-                                <compilerArgs>
-                                    <arg>--add-modules</arg>
-                                    <arg>java.xml.bind</arg>
-                                    <arg>--upgrade-module-path</arg>
-                                    <arg>${endorsed.dir}</arg>
-                                </compilerArgs>
+                                <source>${upper.java.level}</source>
+                                <target>${upper.java.level}</target>
                             </configuration>
                         </execution>
                         <execution>
@@ -319,14 +315,15 @@
                             <configuration>
                                 <release>${base.java.level}</release>
                                 <excludes>
-                                    <exclude>module-info.java</exclude>
+                                   <exclude>module-info.java</exclude>
                                 </excludes>
                             </configuration>
                         </execution>
                     </executions>
                     <configuration>
                         <!--test compile-->
-                        <release>${base.java.level}</release>
+                        <source>1.8</source>
+                        <target>1.8</target>
                     </configuration>
                 </plugin>
 
@@ -408,7 +405,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>3.0.0-M1</version>
+                    <version>3.0.1</version>
                     <configuration>
                         <aggregate>false</aggregate>
                         <dependencySourceExcludes>
@@ -428,6 +425,9 @@
                                 <location>${javadoc.links.dir}/jaxws-api/</location>
                             </offlineLink>
                         </offlineLinks>
+                        <additionalJOptions>
+                            <additionalJOption>-Xdoclint:none</additionalJOption>
+                        </additionalJOptions>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -531,11 +531,6 @@
                         <message>JAX-WS_${project.version}</message>
                     </configuration>
                 </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-antrun-plugin</artifactId>
-                    <version>1.8</version>
-                </plugin>
             </plugins>
         </pluginManagement>
 
@@ -558,7 +553,7 @@
                             <skip>${maven.endorsed.skip}</skip>
                             <outputDirectory>${endorsed.dir}</outputDirectory>
                             <silent>false</silent>
-                            <includeArtifactIds>javax.annotation-api,jsr181-api,jaxb-api,javax.xml.soap-api,jaxws-api</includeArtifactIds>
+                            <includeArtifactIds>javax.annotation-api,javax.jws-api,jaxb-api,javax.xml.soap-api,jaxws-api</includeArtifactIds>
                         </configuration>
                     </execution>
                 </executions>
@@ -712,7 +707,7 @@
             </activation>
             <modules>
                 <module>docs</module>
-                <!--<module>bundles</module>-->
+                <module>bundles</module>
             </modules>
         </profile>
         <profile>
@@ -1024,7 +1019,7 @@
 
         <dependency>
             <groupId>javax.jws</groupId>
-            <artifactId>jsr181-api</artifactId>
+            <artifactId>javax.jws-api</artifactId>
         </dependency>
 
         <dependency>
